# ntm-tracker-2

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.rtf  PLAN.md  README.md
.beads/: .gitignore  issues.jsonl
.github/workflows/: ci.yml  fuzz.yml  release.yml
app/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
app/scripts/: generate-types.ts
app/src/: app.css
app/src-tauri/: Cargo.toml  LICENSE.rtf  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: autostart.rs  bootstrap.rs  commands.rs  daemon.rs  lib.rs  main.rs  tray.rs  upgrade.rs
app/src-tauri/src/transport/: mod.rs  stdio.rs  ws.rs
benchmarks/: command_latency.sh  tmux_poll.sh
daemon/: Cargo.toml
daemon/data/: default_detectors.toml
daemon/fuzz/: Cargo.toml  README.md
daemon/fuzz/corpus/fuzz_compact_detector/: sample1  sample2
daemon/fuzz/corpus/fuzz_ntm_markdown/: sample1
daemon/fuzz/corpus/fuzz_ntm_tail/: sample1  sample2
daemon/fuzz/corpus/fuzz_tmux_panes/: sample1
daemon/fuzz/fuzz_targets/: fuzz_compact_detector.rs  fuzz_ntm_markdown.rs  fuzz_ntm_tail.rs  fuzz_tmux_panes.rs
daemon/src/: bus.rs  cache.rs  cli.rs  command.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  maintenance.rs  metrics.rs  ntm.rs  reconcile.rs  redaction.rs  service.rs  state.rs  token_estimator.rs
daemon/src/collector/: mod.rs  ntm.rs  tmux.rs
daemon/src/detector/: agent_type.rs  compact.rs  escalation.rs  loader.rs  mod.rs  status.rs
daemon/src/migrations/: 0001_init.sql
daemon/src/models/: pane.rs  session.rs
daemon/src/parsers/: mod.rs  ntm_markdown.rs  ntm_tail.rs  tmux_panes.rs
daemon/src/rpc/: mod.rs
daemon/src/rpc/handlers/: actions.rs  admin.rs  core.rs  debug.rs  events.rs  mod.rs  panes.rs  sessions.rs  stats.rs
daemon/src/transport/: http.rs  mod.rs  stdio.rs  ws.rs
daemon/systemd/: ntm-tracker.service  ntm-tracker.user.service
daemon/tests/: golden.rs  integration.rs  schema_validation.rs
daemon/tests/snapshots/: golden__snapshot_robot_markdown.snap  golden__snapshot_robot_markdown_compact.snap  golden__snapshot_robot_tail.snap  golden__snapshot_tmux_list_panes_parser.snap
docs/: configuration.md  design-tokens.md  information-architecture.md  load-test-results.md  msi-validation.md  ntm-compatibility.md  performance-baseline.md  performance-results.md  qa-checklist.md  release-signing.md  stdio-validation.md  test-matrix-results.md  timeout-config.md  transport-validation.md  tray-popover-ux.md  troubleshooting.md  ui-design-patterns.md  ui-patterns-codexmonitor.md  ui-qa-notes.md
docs/images/: README.md
fixtures/: README.md
fixtures/expected/: ansi-heavy-sample.expected.json  compact-trigger-expected.json  compact-trigger-sample.expected.json  cuas-sim-claude.expected.json  escalation-expected.json  escalation-sample.expected.json  ntracker3-codex.expected.json  shell-only-sample.expected.json  speedread-ios-mixed.expected.json  status-snapshot.expected.json  status-transitions-expected.json  status-transitions-sample.expected.json  unicode-sample.expected.json
fixtures/ntm/: README.md  robot-markdown-compact.md  robot-snapshot.json  robot-status.json  robot-terse.txt  robot-version.json  version.txt
fixtures/sessions/: README.md  ansi-heavy-sample.json  compact-trigger-sample.json  (+7 more)
scripts/: build.ps1  run_tests.sh  sign.ps1
tui/: Cargo.toml
tui/src/: app.rs  lib.rs  main.rs  msg.rs  test_helpers.rs  theme.rs
tui/src/rpc/: client.rs  types.rs
tui/src/screens/: dashboard.rs  events.rs  health.rs  help.rs  mod.rs  session_detail.rs
tui/src/widgets/: activity_spark.rs  command_palette_wrapper.rs  connection_bar.rs  escalation_inbox.rs  event_timeline.rs  mod.rs  overview_cards.rs  pane_table.rs  session_list.rs  status_badge.rs  toast_manager.rs
tui/tests/: e2e_daemon.rs  e2e_navigation.rs
tui/tests/helpers/: fixtures.rs  logging.rs  mod.rs  render.rs
(+53 files in other folders)
