[package]
name = "ntm-tracker-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dashmap = "5"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }
schemars = "0.8"

[profile.release]
lto = true
codegen-units = 1
